# Vscode_Qt6_Setup

./: CMakeLists.txt  README.md
include/: widget.hpp
src/: widget.cpp
